--- a/myapplication.yaml
+++ b/myapplication.yaml
@@ -1,7 +1,7 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: test
+  name: rollout-bluegreen
   namespace: argocd
 spec:
   project: default
@@ -11,7 +11,7 @@ spec:
     path: spring-boot
   destination: 
     server: https://kubernetes.default.svc
-    namespace: myapp
+    namespace: spring-boot
 
   syncPolicy:
     syncOptions:
