--- a/spring-boot/rollout.yaml
+++ b/spring-boot/rollout.yaml
@@ -30,10 +30,10 @@ spec:
       previewService: rollout-bluegreen-preview
       autoPromotionEnabled: false
 
-      trafficRouting:
-        istio:
-          virtualService:
-            name: springboot-vs  # required
-            routes:
-            - primary   
+      # trafficRouting:
+      #   istio:
+      #     virtualService:
+      #       name: springboot-vs  # required
+      #       routes:
+      #       - primary   
 
