--- a/spring-boot/Gateway.yaml
+++ b/spring-boot/Gateway.yaml
@@ -9,7 +9,7 @@ spec:
   servers:
   - port:
       number: 6789
-      name: http
-      protocol: HTTP
+      name: tcp
+      protocol: TCP
     hosts:
     - "*"
