--- a/myapplication.yaml
+++ b/myapplication.yaml
@@ -8,10 +8,10 @@ spec:
   source:
     repoURL: https://github.com/ShahadSha/BG-with-ArgoRollouts-and-Istio.git
     targetRevision: HEAD
-    path: spring-boot
+    path: springboot
   destination: 
     server: https://kubernetes.default.svc
-    namespace: spring-boot
+    namespace: springboot
 
   syncPolicy:
     syncOptions:
