--- a/springboot/templates/Virtualservice.yaml
+++ b/springboot/templates/Virtualservice.yaml
@@ -1,23 +1,19 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
-  name: rollout-vsvc
+  name: myapp
 spec:
-  gateways:
-  - istio-rollout-gateway
   hosts:
-  - istio-rollout.dev.argoproj.io
+  - "*"
+  gateways:
+  - app-gateway
   http:
-     route:
-    - destination:
-        host: rollout-bluegreen-preview # Service name
-        subset: blue #subset declared in DestinationRule
-        port:
-          number: 6789
-      weight: 70
-    - destination:
-        host: rollout-bluegreen-active # Service name
-        subset: green #subset declared in DestinationRule
-        port:
-          number: 6789
-      weight: 30
+    - route:
+      - destination:
+          host: myapp
+          subset: v1
+        weight: 50
+      - destination:
+          host: myapp
+          subset: v2
+        weight: 50       
