--- a/springboot/templates/Gateway.yaml
+++ b/springboot/templates/Gateway.yaml
@@ -1,7 +1,7 @@
 apiVersion: networking.istio.io/v1alpha3
 kind: Gateway
 metadata:
-  name: springboot-Gateway
+  name: springboot-gateway
 spec:
   selector:
     istio: ingressgateway
