--- a/test/rollout.yaml
+++ b/test/rollout.yaml
@@ -2,6 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: rollout-bluegreen
+  namespace: springboot
 spec:
   replicas: 2
   selector:
@@ -15,6 +16,7 @@ spec:
       containers:
       - name: superapi
         image: shahadsha/hello-world:30
+        imagePullPolicy: IfNotPresent
         resources:
           requests:
             memory: "128Mi"
