--- a/test/VirtualService.yaml
+++ b/test/VirtualService.yaml
@@ -14,6 +14,6 @@ spec:
         prefix: /home
     route:
     - destination:
-        host: springboot-home
+        host: kubernetes.default.svc
         port:
           number: 6789
