--- a/myapplication.yaml
+++ b/myapplication.yaml
@@ -14,8 +14,8 @@ spec:
     namespace: springboot
 
   syncPolicy:
-    syncOptions:
-    - CreateNamespace=true
+    # syncOptions:
+    # - CreateNamespace=true
     automated:
       selfHeal: true
       prune: true
