--- a/myapplication.yaml
+++ b/myapplication.yaml
@@ -2,6 +2,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: rollout-bluegreen
+  annotations:
+    sidecar.istio.io/inject: 'true'
   namespace: argocd
 spec:
   project: default
