--- a/test/rollout.yaml
+++ b/test/rollout.yaml
@@ -10,6 +10,8 @@ spec:
       app: rollout-bluegreen
   template:
     metadata:
+      annotations:
+        sidecar.istio.io/inject: 'true'
       labels:
         app: rollout-bluegreen
     spec:
