--- a/myapplication.yaml
+++ b/myapplication.yaml
@@ -16,8 +16,8 @@ spec:
     namespace: springboot
 
   syncPolicy:
-    # syncOptions:
-    # - CreateNamespace=true
+    syncOptions:
+    - CreateNamespace=true
     automated:
       selfHeal: true
       prune: true
