--- a/test/Destinationrule.yaml
+++ b/test/Destinationrule.yaml
@@ -2,6 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: DestinationRule
 metadata:
   name: springboot-home
+  namespace: springboot2
 spec:
   host: kubernetes.default.svc
   trafficPolicy:
