--- a/test/VirtualService.yaml
+++ b/test/VirtualService.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.istio.io/v1alpha3
 kind: VirtualService
 metadata:
   name: springboot-vs
-  namespace: springboot
+  namespace: springboot2
 spec:
   hosts:
   - "*"
