--- a/test/rollout.yaml
+++ b/test/rollout.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Rollout
 metadata:
   name: rollout-bluegreen
-  namespace: springboot
+  namespace: springboot2
 spec:
   replicas: 2
   selector:
