--- a/test/rollout.yaml
+++ b/test/rollout.yaml
@@ -10,12 +10,11 @@ spec:
       app: rollout-bluegreen
   template:
     metadata:
-      
       labels:
         app: rollout-bluegreen
     spec:
       containers:
-      - name: superapi
+      - name: hello-world
         image: shahadsha/hello-world:35
         imagePullPolicy: IfNotPresent
         resources:
