--- a/test/service.yaml
+++ b/test/service.yaml
@@ -8,10 +8,9 @@ spec:
     app: rollout-bluegreen
   ports:
   - name: http
-    port: 80
+    port: 6789
     protocol: TCP
-    targetPort: http
-  type: ClusterIP
+  type: NodePort
 
 ---
 kind: Service
@@ -24,7 +23,6 @@ spec:
     app: rollout-bluegreen
   ports:
   - name: http
-    port: 80
+    port: 6789
     protocol: TCP
-    targetPort: http
-  type: ClusterIP
+  type: NodePort
