--- a/test/service.yaml
+++ b/test/service.yaml
@@ -2,7 +2,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: rollout-bluegreen-active
-  namespace: springboot2
+  namespace: springboot
 spec:
   selector:
     app: rollout-bluegreen
@@ -17,7 +17,7 @@ kind: Service
 apiVersion: v1
 metadata:
   name: rollout-bluegreen-preview
-  namespace: springboot2
+  namespace: springboot
 spec:
   selector:
     app: rollout-bluegreen
