--- a/test/VirtualService.yaml
+++ b/test/VirtualService.yaml
@@ -14,6 +14,6 @@ spec:
         prefix: /hello
     route:
     - destination:
-        host: "rollout-bluegreen-active.springboot2.svc.cluster.local"
+        host: "rollout-bluegreen-active.springboot.svc.cluster.local"
         port:
           number: 6789
