--- a/test/VirtualService.yaml
+++ b/test/VirtualService.yaml
@@ -11,7 +11,7 @@ spec:
   http:
   - match:
     - uri:
-        prefix: /hello
+        prefix: "/hello"
     route:
     - destination:
         host: "rollout-bluegreen-active.springboot.svc.cluster.local"
