--- a/test/service.yaml
+++ b/test/service.yaml
@@ -9,9 +9,7 @@ spec:
   ports:
   - name: http
     port: 6789
-    targetPort: 6789
-    protocol: TCP
-  type: NodePort
+  type: ClusterIP
 
 ---
 kind: Service
@@ -25,6 +23,4 @@ spec:
   ports:
   - name: http
     port: 6789
-    targetPort: 6789
-    protocol: TCP
-  type: NodePort
+  type: ClusterIP
