--- a/test/service.yaml
+++ b/test/service.yaml
@@ -8,8 +8,7 @@ spec:
     app: rollout-bluegreen
   ports:
   - port: 6789
-    protocol: TCP
-  type: NodePort
+    name: http
 
 ---
 kind: Service
@@ -22,6 +21,5 @@ spec:
     app: rollout-bluegreen
   ports:
   - port: 6789
-    protocol: TCP
-  type: NodePort
+    name: http
 
