--- a/test/service.yaml
+++ b/test/service.yaml
@@ -8,7 +8,7 @@ spec:
     app: rollout-bluegreen
   ports:
   - port: 6789
-    name: http
+    name: https
 
 ---
 kind: Service
@@ -21,5 +21,5 @@ spec:
     app: rollout-bluegreen
   ports:
   - port: 6789
-    name: http
+    name: https
 
