--- a/myapplication.yaml
+++ b/myapplication.yaml
@@ -10,7 +10,7 @@ spec:
   source:
     repoURL: https://github.com/ShahadSha/BG-with-ArgoRollouts-and-Istio.git
     targetRevision: HEAD
-    path: test
+    path: springboot
   destination: 
     server: https://kubernetes.default.svc
     namespace: springboot
